# sfastmatrixmult

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  readme.md
bench/: becnh_eigen.cpp  bench_boost.cpp  bench_cache_oblivious_mult.cpp  bench_constants.h  bench_simd.cpp  bench_simple_mult.cpp  bench_strassen.cpp  sources.cmake
include/s_fast/: s_fast.h
src/: cache_oblivious_multpiplication.h  helper.h  matrix.h  simd_multiplication.h  simple_multiplication.h  strassen.h  utils.h  view_matrix.h  view_matrix_helper.h
tests/: sources.cmake  test_cache_oblivious_mult.cpp  test_matrix.cpp  test_simd_mult.cpp  test_simple_mult.cpp  test_strassen.cpp  test_view_matrix.cpp  utils.h
